# 7wayfun

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  GITHUB_MANUAL_SETUP.md  GITHUB_SETUP.md  LICENSE  Makefile  PROJECT_BRIEF.md  README.md  ROADMAP.md  launch_simulator.sh  pyproject.toml
.claude/agents/: trailer-tester-executor.md  trailer-tester-verifier.md
docs/: ASSEMBLY_GUIDE.md  CALIBRATION_PROCEDURE.md  DIAGRAMS.md  HARDWARE_DESIGN.md  SHOPPING_LIST.md  USER_MANUAL.md
docs/diagrams/: README.md  generate_diagrams.py  system_architecture.md
firmware/: adc_manager.py  code.py  diagnostics.py  display_manager.py  logger.py  neopixel_manager.py  relay_manager.py  test_modes.py
simulator/: README.md  mock_adafruit_ads1x15.py  mock_adafruit_display_text.py  mock_adafruit_displayio_sh1107.py  mock_board.py  mock_busio.py  mock_digitalio.py  mock_displayio.py  mock_micropython.py  mock_neopixel.py  mock_terminalio.py  requirements.txt  run_simulator.py  sim_state.py  test_firmware.py
